--- a/react-app/src/components/Reports/ReportDetails/ReportStaffs/EditReportStaffs/EditReportStaff.css
+++ b/react-app/src/components/Reports/ReportDetails/ReportStaffs/EditReportStaffs/EditReportStaff.css
@@ -107,12 +107,15 @@
 
 
 .edit-report-staff-remove-container{
-    width: 80%;
+        box-sizing: border-box;
+    width: 78%;
     display: flex;
     flex-wrap: wrap;
+    margin-right: 1vw;
 }
 
 .edit-report-staff-name-container{
+    box-sizing: border-box;
     margin-top: 5px;
     display: flex;
     padding-left: 3px;
@@ -121,10 +124,16 @@
     border: 2px solid black;
     border-radius: 5px;
     margin-right: 10px;
-    height: 22px;
+    width: 100%;
 }
 
+.edit-report-staff-name{
+    box-sizing: border-box;
+    overflow-x: hidden;
+    width: 22.5vw;
+}
 .edit-report-staff-remove-icon-container {
+    height: 0%;
     width: 0px;
 }
 
